# ic-dbms-canister

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml
docs/: arch.md  memory.md
example/: Cargo.toml
example/src/: lib.rs
ic-dbms-api/: Cargo.toml
ic-dbms-api/src/: dbms.rs  error.rs  lib.rs  memory.rs  prelude.rs  tests.rs
ic-dbms-api/src/dbms/: database.rs  foreign_fetcher.rs  query.rs  table.rs  transaction.rs  types.rs  value.rs
ic-dbms-api/src/dbms/query/: builder.rs  delete.rs  filter.rs
ic-dbms-api/src/dbms/table/: column_def.rs  record.rs  schema.rs
ic-dbms-api/src/dbms/types/: blob.rs  boolean.rs  date.rs  decimal.rs  int32.rs  int64.rs  principal.rs  text.rs  uint32.rs  uint64.rs  uuid.rs
ic-dbms-api/src/memory/: encode.rs  error.rs
ic-dbms-canister/: Cargo.toml
ic-dbms-canister/src/: data_types.rs  dbms.rs  lib.rs  memory.rs  prelude.rs  query.rs  table.rs  tests.rs  utils.rs
ic-dbms-canister/src/dbms/: foreign_fetcher.rs  integrity.rs  query.rs  schema.rs  table.rs  transaction.rs
ic-dbms-canister/src/dbms/integrity/: insert.rs
ic-dbms-canister/src/dbms/query/: builder.rs  filter.rs  table_ops.rs
ic-dbms-canister/src/dbms/table/: record.rs  schema.rs
ic-dbms-canister/src/dbms/transaction/: overlay.rs  session.rs
ic-dbms-canister/src/dbms/transaction/overlay/: reader.rs  table.rs
ic-dbms-canister/src/dbms/types/: datetime.rs  nullable.rs
ic-dbms-canister/src/memory/: acl.rs  delegate.rs  encode.rs  error.rs  provider.rs  schema_registry.rs  table_registry.rs  table_registry_page.rs
ic-dbms-canister/src/memory/table_registry/: deleted_records_ledger.rs  page_ledger.rs  raw_record.rs  table_reader.rs
ic-dbms-canister/src/memory/table_registry/deleted_records_ledger/: deleted_records.rs
ic-dbms-canister/src/memory/table_registry/free_segments_ledger/: free_segment.rs
ic-dbms-canister/src/memory/table_registry/page_ledger/: page_table.rs
ic-dbms-canister/src/query/: builder.rs  table_ops.rs
ic-dbms-canister/src/table/: schema.rs
ic-dbms-canister/src/tests/: message.rs  post.rs  user.rs
ic-dbms-macros/: Cargo.toml
ic-dbms-macros/src/: encode.rs  lib.rs
ic-dbms-types/: Cargo.toml
ic-dbms-types/src/: lib.rs
just/: build.just  code_check.just  publish.just  test.just
