[workspace]
members = ["ic-dbms-canister", "ic-dbms-macros", "ic-dbms-types"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.85.1"
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
repository = "https://github.com/veeso/ic-dbms-canister"
license = "MIT"
keywords = ["ic", "dbms", "canister", "database", "async"]
categories = ["database", "network-programming", "wasm"]

[workspace.dependencies]
candid = { version = "0.10", features = ["value"] }
getrandom = { version = "0.3", default-features = false }
ic-cdk = "0.19"
ic-cdk-macros = "0.19"
like = "0.3"
proc-macro2 = "1"
quote = "1"
rust_decimal = "1"
serde = "1"
syn = "2"
thiserror = "2"
uuid = { version = "1", default-features = false, features = [
  "v7",
  "rng-getrandom",
] }
