[package]
name = "ic-dbms-types"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }
documentation = "https://docs.rs/ic-dbms-types/"
description = "Types for using the ic-dbms-canister in external canisters."
include = [
  "examples/**/*",
  "src/**/*",
  "../LICENSE",
  "../README.md",
  "../CHANGELOG.md",
  "../assets/images/cargo/logo-128.png",
]
readme = "../README.md"

[dependencies]
candid = { workspace = true }
getrandom = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-dbms-macros = { version = "0.0", path = "../ic-dbms-macros" }
like = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
